--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,10 @@ header button {
     font-weight: 300;
 }
 
+h4 .shadow {
+    box-shadow: 0px 4px 8px 0px rgb(0, 0, 0.2);
+}
+
 #projects-section .card {
     margin-bottom: 16px;
 }
@@ -46,4 +50,56 @@ header button {
 
 ::-webkit-scrollbar {
     display: none;
+}
+
+.row i {
+    font-size: 2rem;
+    float: right;
+    text-decoration: none;
+    color: #075E54;
+}
+
+
+#social-div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#box2 span {
+    display: inline-block
+}
+
+#box2 span a {
+    margin: 0 1rem;
+}
+
+#box2 span .fa-square-twitter {
+    color: #1DA1F2;
+
+    border-radius: 5px;
+}
+
+#box2 span .fa-square-facebook {
+    color: #316FF6;
+}
+
+#box2 span .fa-facebook-messenger {
+    color: #0099FF;
+}
+
+#box2 span .fa-square-youtube {
+    color: #CD201F;
+    /* background-image: linear-gradient(to right #4f5bd5 #962fbf #d62976 #fa7e1e #feda75);
+    -webkit-background-clip: text; */
+}
+
+#box2 span .fa-square-whatsapp {
+    color: #128C7E;
+}
+
+
+
+footer a {
+    color: #fff;
 }
